ES6 : till event binding

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ES6 Demo</title>
+    <title>ES6</title>
 </head>
 <body>
+    <section id="function">
+        <div id="rest">
+            <h4> REST function </h4>
+        </div>
+        <div id="anonymous">
+            <h4> Anonymous Function <h4>
+        </div>
+        <div id="lambda">
+            <h4> Lambda Functoin</h4>
+        </div>
+    </section>
+    <section id="events">
+        <div id="btn1" class="btn btn1">
+            <button>This is btn</button>
+        </div>
+        <div id="btn2" class="btn btn2">
+            <button>Button 2</button>
+        </div>
+    </section>
     <script type="text/javascript" src = './dist/my-app.js'></script>
 </body>
 </html>
