--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
             <button>Button 2</button>
         </div>
     </section>
+
+    <section id="dialog-boxes">
+        <div id="alert" class="btn alert">
+            <button>Alert</button>
+        </div>
+        <div id="confirm" class="btn confirm">
+            <button>Confirm</button>
+        </div>
+        <div id="prompt" class="btn prompt">
+            <button>Prompt</button>
+        </div>
+    </section>
+
     <script type="text/javascript" src = './dist/my-app.js'></script>
 </body>
 </html>
